# Testering

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
.github/workflows/: build-windows.yml
installer/: volchay.iss
scripts/: log_analyzer.py
src/: main.cpp
src/core/: LogReader.cpp  LogReader.h  Logger.cpp  Logger.h  MpvObject.cpp  MpvObject.h  PowerWatcher.cpp  PowerWatcher.h  Settings.cpp  Settings.h  SystemTray.cpp  SystemTray.h  ThemeManager.cpp  ThemeManager.h  WallpaperEngine.cpp  WallpaperEngine.h  WallpaperLibrary.cpp  WallpaperLibrary.h
src/qml/: Main.qml
src/qml/components/: AccentButton.qml  IconButton.qml  PreviewArea.qml  SideBar.qml  ThemePicker.qml  WallpaperCard.qml
src/qml/dialogs/: ConfirmDialog.qml
src/qml/pages/: AboutPage.qml  HomePage.qml  LibraryPage.qml  LogsPage.qml  SettingsPage.qml
